airflowVK_DAG/logs/dag_id=dag_saver_v01/run_id=manual__2024-09-21T10:16:53.827636+00:00/task_id=create_table_vk/attempt=1.log
[2024-09-21T10:16:55.335+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: dag_saver_v01.create_table_vk manual__2024-09-21T10:16:53.827636+00:00 [queued]>
[2024-09-21T10:16:55.342+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: dag_saver_v01.create_table_vk manual__2024-09-21T10:16:53.827636+00:00 [queued]>
[2024-09-21T10:16:55.342+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2024-09-21T10:16:55.342+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 2
[2024-09-21T10:16:55.342+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2024-09-21T10:16:55.351+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): create_table_vk> on 2024-09-21 10:16:53.827636+00:00
[2024-09-21T10:16:55.355+0000] {standard_task_runner.py:55} INFO - Started process 3765 to run task
[2024-09-21T10:16:55.358+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_saver_v01', 'create_table_vk', 'manual__2024-09-21T10:16:53.827636+00:00', '--job-id', '6', '--raw', '--subdir', 'DAGS_FOLDER/dag_saver.py', '--cfg-path', '/tmp/tmpi7l78div']
[2024-09-21T10:16:55.358+0000] {standard_task_runner.py:83} INFO - Job 6: Subtask create_table_vk
[2024-09-21T10:16:55.402+0000] {task_command.py:389} INFO - Running <TaskInstance: dag_saver_v01.create_table_vk manual__2024-09-21T10:16:53.827636+00:00 [running]> on host 16da3808dee2
[2024-09-21T10:16:55.442+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=<NAME>
AIRFLOW_CTX_DAG_ID=dag_saver_v01
AIRFLOW_CTX_TASK_ID=create_table_vk
AIRFLOW_CTX_EXECUTION_DATE=2024-09-21T10:16:53.827636+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-09-21T10:16:53.827636+00:00
[2024-09-21T10:16:55.443+0000] {sql.py:253} INFO - Executing: 
            create table if not exists vk_group_posts (
                id serial PRIMARY KEY,
                vk_group_link VARCHAR,
                vk_post_id INTEGER,
                vk_post_text VARCHAR,
                vk_post_comments VARCHAR,
                datetime timestamp default systimestemp,
            );
        
[2024-09-21T10:16:55.448+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2024-09-21T10:16:55.562+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2024-09-21T10:16:55.569+0000] {sql.py:364} INFO - Running statement: 
            create table if not exists vk_group_posts (
                id serial PRIMARY KEY,
                vk_group_link VARCHAR,
                vk_post_id INTEGER,
                vk_post_text VARCHAR,
                vk_post_comments VARCHAR,
                datetime timestamp default systimestemp,
            );
        , parameters: None
[2024-09-21T10:16:55.570+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 9:             );
                    ^

[2024-09-21T10:16:55.575+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_saver_v01, task_id=create_table_vk, execution_date=20240921T101653, start_date=20240921T101655, end_date=20240921T101655
[2024-09-21T10:16:55.580+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 6 for task create_table_vk (syntax error at or near ")"
LINE 9:             );
                    ^
; 3765)
[2024-09-21T10:16:55.586+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2024-09-21T10:16:55.600+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
